2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* MANIFEST
	* GObject.xs
	* t/lazy-loader.t: Make sure the lazy loader can handle being
	invoked on packages which aren't registered with the Glib type
	system.  This can happen when a non-registered package is setup to
	inherit from a registered package, and when then some method is
	invoked on the non-registered package.  This gets rid of the
	spurious "asked to lazy-load Foo, but that package is not
	registered" warnings.

2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GParamSpec.xs:
	* GValue.xs: Handle NULL GParamSpecs in newSVGParamSpec by
	returning undef.  Consequently, remove the NULL handling in
	_gperl_sv_from_value_internal.  This partly reverts the commit
	from 2008-08-18 and brings newSVGParamSpec in line with the other
	SV* constructors.

	* GObject.xs
	* t/5.t: Fix the stack handling in Glib::Object::get to be robust
	against stack movement due to reallocation.  This can happen if a
	subclass' GET_PROPERTY triggers a stack resize.  Patch by Kevin
	Ryde.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* MakeHelper.pm (postamble_docs_full): Fix the POD index
	generation.  For five months now, broken index pages (like
	Glib::index) were being created due to shell command quoting
	issues.

2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/e.t
	* GValue.xs (_gperl_sv_from_value_internal): Handle NULL
	GParamSpecs gracefully by returning undef.

	* GParamSpec.xs (newSVGParamSpec): Croak on NULL GParamSpecs.

2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GObject.xs (g_object_new): Check that we got a correct number of
	arguments.

	* t/2.t: Fix a typo uncovered by the above change.

2008-07-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GType.xs: In the overloaded flags operators, don't choke on